# ChestImagingPlatform

./: .gitignore  CIP.cmake  CIPConfig.cmake  CMakeLists.txt  CTestConfig.cmake  License.txt  Makefile  README.md  SuperBuild.cmake  UseFile.cmake  cipMacroBuildCLI.cmake
CommandLineTools/ClassifyFissureParticles/: CMakeLists.txt  ClassifyFissureParticles.cxx  ClassifyFissureParticles.xml  Makefile
CommandLineTools/ComputeDistanceMap/: CMakeLists.txt  ComputeDistanceMap.cxx  ComputeDistanceMap.cxx~  ComputeDistanceMap.xml  Makefile
CommandLineTools/ComputeIntensityStatistics/: CMakeLists.txt  ComputeIntensityStatistics.cxx  ComputeIntensityStatistics.xml  Makefile
CommandLineTools/ConvertLabelMapValueToChestRegionChestType/: CMakeLists.txt  ConvertLabelMapValueToChestRegionChestType.cxx  ConvertLabelMapValueToChestRegionChestType.xml  Makefile
CommandLineTools/CropLung/: CMakeLists.txt  CropLung.cxx  CropLung.cxx~  CropLung.xml  Makefile
CommandLineTools/EvaluateLungLobeSegmentationResults/: CMakeLists.txt  EvaluateLungLobeSegmentationResults.cxx  EvaluateLungLobeSegmentationResults.cxx~  EvaluateLungLobeSegmentationResults.xml  Makefile
CommandLineTools/ExtractChestLabelMap/: CMakeLists.txt  ExtractChestLabelMap.cxx  ExtractChestLabelMap.xml  Makefile
CommandLineTools/ExtractParticlesFromChestRegionChestType/: CMakeLists.txt  CMakeLists.txt-orig  ExtractParticlesFromChestRegionChestType.cxx  ExtractParticlesFromChestRegionChestType.cxx-orig  ExtractParticlesFromChestRegionChestType.xml  ExtractParticlesFromChestRegionChestType.xml-orig  ExtractParticlesFromChestRegionChestType.xml_orig  ExtractParticlesFromChestRegionChestTypeCLP.h  Makefile
CommandLineTools/FilterAirwayParticleData/: CMakeLists.txt  FilterAirwayParticleData.cxx  FilterAirwayParticleData.xml  Makefile
CommandLineTools/FilterConnectedComponents/: CMakeLists.txt  FilterConnectedComponents.cxx  FilterConnectedComponents.xml  FilterConnectedComponentsHelper.cxx  FilterConnectedComponentsHelper.h
CommandLineTools/FilterFissureParticleData/: CMakeLists.txt  FilterFissureParticleData.cxx  FilterFissureParticleData.xml  Makefile
CommandLineTools/FilterVesselParticleData/: CMakeLists.txt  FilterVesselParticleData.cxx  FilterVesselParticleData.xml  Makefile
CommandLineTools/FitFissureSurfaceModelToParticleData/: CMakeLists.txt  FitFissureSurfaceModelToParticleData.cxx  FitFissureSurfaceModelToParticleData.xml  Makefile
CommandLineTools/FitFissureSurfaceModelsToParticleData/: CMakeLists.txt  FitFissureSurfaceModelsToParticleData.cxx  FitFissureSurfaceModelsToParticleData.xml  Makefile
CommandLineTools/FitShapeModel/: CMakeLists.txt  FitShapeModel.cxx  FitShapeModel.xml  FitShapeModelTypes.h  ShapeModel.cxx  ShapeModel.h  ShapeModelFinalizer.cxx  ShapeModelFinalizer.h  ShapeModelImage.h  ShapeModelImageFactory.cxx  ShapeModelImageFactory.h  ShapeModelImageFloat.h  ShapeModelImageITK.h  ShapeModelImageShort.h  ShapeModelInitializer.cxx  ShapeModelInitializer.h  ShapeModelMeshWriter.h  ShapeModelObject.h  ShapeModelOptimizer.cxx  ShapeModelOptimizer.h  ShapeModelOptimizerCT.cxx  ShapeModelOptimizerCT.h  ShapeModelOptimizerDT.cxx  ShapeModelOptimizerDT.h  ShapeModelUtils.cxx  ShapeModelUtils.h  ShapeModelVisualizer.cxx  ShapeModelVisualizer.h  VNLVTKConverters.cxx  VNLVTKConverters.h  VTKPolyDataToITKMesh.h  cnpy.cpp  cnpy.h
CommandLineTools/GenerateDistanceMapFromLabelMap/: CMakeLists.txt  GenerateDistanceMapFromLabelMap.cxx  GenerateDistanceMapFromLabelMap.xml  Makefile
CommandLineTools/GenerateFissureShapeModels/: CMakeLists.txt  GenerateFissureShapeModels.cxx  GenerateFissureShapeModels.xml  Makefile
CommandLineTools/GenerateImageSubVolumes/: CMakeLists.txt  GenerateImageSubVolumes.cxx  GenerateImageSubVolumes.cxx~  GenerateImageSubVolumes.xml  Makefile
CommandLineTools/GenerateInteractiveLobeSegmentationFissureMask/: CMakeLists.txt  GenerateInteractiveLobeSegmentationFissureMask.cxx  GenerateInteractiveLobeSegmentationFissureMask.xml
CommandLineTools/GenerateLobeSurfaceModels/: CMakeLists.txt  GenerateLobeSurfaceModels.cxx  GenerateLobeSurfaceModels.xml  GenerateLobeSurfaceModelsHelper.cxx  GenerateLobeSurfaceModelsHelper.h
CommandLineTools/GenerateMedianFilteredImage/: CMakeLists.txt  GenerateMedianFilteredImage.cxx  GenerateMedianFilteredImage.xml  GenerateMedianFilteredImageCLP.h  Makefile
CommandLineTools/GenerateModel/: CMakeLists.txt  Makefile  (+2 more)
Common/: CMakeLists.txt  InterSubjectMeasures-v2.dtd  InterSubjectMeasures-v3.dtd  Makefile  RegistrationOutput-v1.dtd  RegistrationOutput-v2.dtd  cipAirwayDataInteractor.cxx  cipAirwayDataInteractor.h  cipAirwayParticleConnectedComponentFilter.cxx  cipAirwayParticleConnectedComponentFilter.h  cipChestConventions.cxx  cipChestConventions.h  cipChestConventionsXmlAutoGenerated.h  cipChestConventionsXmlAutoGenerated.h.template  cipChestConventionsXmlParser.py  cipChestDataViewer.cxx  cipChestDataViewer.h  cipChestRegionChestTypeLocations.cxx  cipChestRegionChestTypeLocations.h  cipConnectedAirwayParticlesToHMMAirwayGraphFunctor.cxx  cipConnectedAirwayParticlesToHMMAirwayGraphFunctor.h  cipConventions.h  cipCylinderStencil.cxx  cipCylinderStencil.h  cipExceptionObject.cxx  cipExceptionObject.h  cipFissureDataInteractor.cxx  cipFissureDataInteractor.h  cipFissureParticleConnectedComponentFilter.cxx  cipFissureParticleConnectedComponentFilter.h  cipGeometryTopologyData.cxx  cipGeometryTopologyData.h  cipHelper.cxx  cipHelper.h  cipLabelMapToLungLobeLabelMapImageFilter.h  cipLabelMapToLungLobeLabelMapImageFilter.txx  cipLeftLobesThinPlateSplineSurfaceModelToParticlesMetric.cxx  cipLeftLobesThinPlateSplineSurfaceModelToParticlesMetric.h  cipLobeBoundaryShapeModel.h  cipLobeSurfaceModel.cxx  (+102 more)
IO/: CMakeLists.txt  Makefile  cipChestRegionChestTypeLocationsIO.cxx  cipChestRegionChestTypeLocationsIO.h  cipGeometryTopologyDataIO.cxx  cipGeometryTopologyDataIO.h  cipLobeBoundaryShapeModelIO.cxx  cipLobeSurfaceModelIO.cxx  cipLobeSurfaceModelIO.h  cipThinPlateSplineSurfaceIO.cxx  cipThinPlateSplineSurfaceIO.h
Utilities/: CMakeLists.txt  Makefile
(+1404 files in other folders)
