CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT( ComputeIntensityStatistics )

set(MODULE_NAME ComputeIntensityStatistics)

find_package(SlicerExecutionModel REQUIRED)
include(${SlicerExecutionModel_USE_FILE})

set(MODULE_INCLUDE_DIRECTORIES
  ${CIP_INCLUDE_DIRECTORIES}
  )
  
set(MODULE_TARGET_LIBRARIES
  ${CIP_LIBRARIES}
  )
  
  set(MODULE_SRCS
  )
  
SEMMacroBuildCLI(
  NAME ${MODULE_NAME}
  TARGET_LIBRARIES ${MODULE_TARGET_LIBRARIES}
  INCLUDE_DIRECTORIES ${MODULE_INCLUDE_DIRECTORIES}
  ADDITIONAL_SRCS ${MODULE_SRCS}
  RUNTIME_OUTPUT_DIRECTORY        "${CMAKE_BINARY_DIR}/bin"
  EXECUTABLE_ONLY
  )
