CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT( CropLung )

INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/Common )
INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/Utilities )

SET ( CropLung_SOURCE CropLung.cxx )

ADD_EXECUTABLE ( CropLung ${CropLung_SOURCE})
TARGET_LINK_LIBRARIES ( CropLung ${ITK_LIBRARIES} ${VTK_LIBRARIES} CIPCommon )
