CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT( ExtractChestLabelMap )

INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/Common )
INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/Utilities )

SET ( ExtractChestLabelMap_SOURCE ExtractChestLabelMap.cxx )

ADD_EXECUTABLE ( ExtractChestLabelMap ${ExtractChestLabelMap_SOURCE})
TARGET_LINK_LIBRARIES ( ExtractChestLabelMap ${ITK_LIBRARIES} ${VTK_LIBRARIES} CIPCommon )
